--- a/index.html
+++ b/index.html
@@ -1,1 +1,44 @@
+<html lang="en"></html>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Paper2go</title>
+    <link rel="stylesheet" href="CSS/Styles.css">
+</head>
+<body>
+    <nav>
+        <ul>
+            <li><a href="#">Paper2go</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Wiki</a></li>
+            <li><a href="#">Forum</a></li>
+            <li><a href="#">Help</a></li>
+        </ul>
+    </nav>
 
+    <section class="hero">
+
+        <div class="container">
+            <div class="hero-content">
+
+                <h1>Paper</h1>
+                <p>This is a site all about paper, its different kinds and uses.</p>
+            </div>
+        </div>
+    </section>
+
+    <section class="boxes">
+        <div class="boxes-content">
+
+            <div class="box">1</div>
+            <div class="box">2</div>
+            <div class="box">3</div>
+            <div class="box">4</div>
+            <div class="box">5</div>
+ 
+        </div>
+    </section>
+
+</body>
+
+</html>
