--- a/Min side/index.html
+++ b/Min side/index.html
@@ -3,41 +3,66 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Paper2go</title>
-    <link rel="stylesheet" href="CSS/Styles.css">
+    <title>Viggo's Nettside</title>
+    <link rel="stylesheet" href="Styles.css">
 </head>
 <body>
     <nav>
         <ul>
-            <li><a href="#">Paper2go</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Wiki</a></li>
-            <li><a href="#">Forum</a></li>
-            <li><a href="#">Help</a></li>
+            <li><a href="#">Hjem</a></li>
+            <li><a href="#">Code</a></li>
+            <li><a href="#">Word</a></li>
+            <li><a href="#">Word</a></li>
+            <li><a href="#">Word</a></li>
         </ul>
     </nav>
 
-    <section class="hero">
+    <section class="head">
 
         <div class="container">
-            <div class="hero-content">
+            <div class="head-content">
 
-                <h1>Paper</h1>
-                <p>This is a site all about paper, its different kinds and uses.</p>
+                <h1>Viggo's Nettside</h1>
+                <p>Velkommen til min side. Den er om alt meg.</p>
+            </div>
+        </div>
+
+    <section class="cards-sec"></section>
+        
+    <div class="card">
+            <div class="card-content">
+                
+                <div class="card-1">
+                    <h1></h1>
+                    <p></p>
+                </div>
             </div>
         </div>
     </section>
 
+
+
     <section class="boxes">
         <div class="boxes-content">
 
-            <div class="box">1</div>
-            <div class="box">2</div>
-            <div class="box">3</div>
-            <div class="box">4</div>
-            <div class="box">5</div>
- 
+            <div class="box">
+                <h2>1</h2>
+            </div>
+            <div class="box">
+                <h2>2</h2>
+            </div>
+            <div class="box">
+                <h2>3</h2>
+            </div>
+            <div class="box">
+                <h2>4</h2>
+            </div>
+            <div class="box">
+                <h2>5</h2>
+            </div>
+
         </div>
+
     </section>
 
 </body>
