--- a/CHAMBR/index.html
+++ b/CHAMBR/index.html
@@ -4,9 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Styles.css">
-    <title>Document</title>
+    <title>Chambr</title>
 </head>
 <body>
-    
+    <nav>
+        <ul>
+            <li><a href="index.html"><img src="Bilder/Logo_Chambr_Svart_2000x499.jpeg" alt="CHAMBR LOGO"></a></li>
+            <li><a href="#">Kontakt</a></li>
+            <li><a href="#">Om Oss</a></li>
+            <li><a href="#">Kontakt</a></li>
+        </ul>
+    </nav>    
+
+
 </body>
 </html>
