--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Viggo's Nettside</title>
-    <link rel="stylesheet" href="/Min side/Styles.css">
+    <link rel="stylesheet" href="CSS/Styles.css">
 </head>
 <body>
     <nav>
@@ -73,5 +73,4 @@
     </section>
 
 </body>
-
 </html>
