--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </div>
         </div>
 
-    <section class="cards-sec">
+    <!--<section class="cards-sec">
         
         <div class="card">
             <div class="card-content">
@@ -45,7 +45,7 @@
             </div>
         </div>
         
-    </section>
+    </section>-->
 
 
 
