--- a/Min Side/index.html
+++ b/Min Side/index.html
@@ -42,6 +42,11 @@
                     <p></p>
                 </div>
 
+                <div class="card-3">
+                    <h1></h1>
+                    <p></p>
+
+                </div>
             </div>
         </div>
         
