--- a/Engelsk Nettside 23.9.2024/index.html
+++ b/Engelsk Nettside 23.9.2024/index.html
@@ -4,11 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="CSS/Styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap" rel="stylesheet">
+   
     <title>Tourism</title>
 </head>
-
-
 <body>
-    
+    <nav>
+        <ul>
+            <li><a href="#">Visit California</a></li>
+            <li><a href="#">Places to visit</a></li>
+            <li><a href="#">Hotels</a></li>
+            <li><a href="#">Shops</a></li>
+            <li><a href="#">Info</a></li>
+        </ul>
+    </nav>
 </body>
 </html>
