--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Viggo's Nettside</title>
-    <link rel="stylesheet" href="Min Side/CSS/Styles.css">
+    <link rel="stylesheet" href="Min Side/CSS/">
 </head>
 <body>
     <nav>
