--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <nav>
         <ul>
-            <li><a href="#">Hjem</a></li>
+            <li><a href="#"><img src="/Min Side/Bilder/Logo.png" alt="Home"></a></li>
             <li><a href="#">Code</a></li>
             <li><a href="#">Word</a></li>
             <li><a href="#">Word</a></li>
