--- a/index.html
+++ b/index.html
@@ -9,11 +9,18 @@
 <body>
     <nav>
         <ul>
-            <li><a href="#"><img src="/Min Side/Bilder/Logo.png" alt="Home"></a></li>
+            <li><a href="index.html">Hjem</a></li>
             <li><a href="#">Code</a></li>
             <li><a href="#">Word</a></li>
             <li><a href="#">Word</a></li>
-            <li><a href="#">Word</a></li>
+            <li><a href="#">Ressurser/Hjelp</a> 
+                <ul class="dropdown">
+                    <li><a href="https://www.w3schools.com/html/default.asp" target="_blank">W3schools</a></li>
+                    <li><a href="https://www.freecodecamp.org/learn/2022/responsive-web-design/" target="_blank">freeCodeCamp</a></li>
+                    <li><a href="https://www.youtube.com/@coding2go" target="_blank">Coding2Go</a></li>
+                    <li><a href="Min Side/bent.html">Bent</a></li>
+                </ul>
+            </li>
         </ul>
     </nav>
 
