--- a/Engelsk Nettside/index.html
+++ b/Engelsk Nettside/index.html
@@ -11,12 +11,22 @@
 <body>
     <nav>
         <ul>
-            <li><a href="#">Visit California</a></li>
+            <li><a href="#"><img src="" alt="Visit California"></a></li>
             <li><a href="#">Places to visit</a></li>
             <li><a href="#">Hotels</a></li>
             <li><a href="#">Shops</a></li>
             <li><a href="#">Info</a></li>
         </ul>
     </nav>
+
+    <section class="hero-card">
+        <div class="hero-container">
+            <div class="hero-content">
+                <h1>Where would you go?</h1>
+                <h4>Visit California today</h4>
+            </div>
+        </div>
+    </section>
+
 </body>
 </html>
