--- a/Min Side/Prosjekter.html
+++ b/Min Side/Prosjekter.html
@@ -3,35 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Viggo's Nettside</title>
-    <link rel="stylesheet" href="Min Side/CSS/Styles.css">
+    <title>Prosjekter</title>
+    <link rel="stylesheet" href="CSS/ProsjekterStyles.css">
 </head>
 <body>
     <nav>
         <ul>
-            <li><a href="index.html">Hjem</a></li>
-            <li><a href="Min Side/Prosjekter.html">Prosjekter</a></li>
-            <li><a href="Min Side/Om Meg.html">Om</a></li>
+            <li><a href="../index.html">Hjem</a></li>
+            <li><a href="#">Prosjekter</a></li>
+            <li><a href="Om Meg.html">Om Meg</a></li>
             <li><a href="#">Word</a></li>
             <li><a href="#">Ressurser/Hjelp</a> 
                 <ul class="dropdown">
                     <li><a href="https://www.w3schools.com/html/default.asp" target="_blank">W3schools</a></li>
                     <li><a href="https://www.freecodecamp.org/learn/2022/responsive-web-design/" target="_blank">freeCodeCamp</a></li>
                     <li><a href="https://www.youtube.com/@coding2go" target="_blank">Coding2Go</a></li>
-                    <li><a href="Min Side/bent.html">Bent</a></li>
+                    <li><a href="bent.html">Bent</a></li>
                 </ul>
             </li>
         </ul>
     </nav>
 
-    <section class="head">
 
-        <div class="container">
-            <div class="head-content">
-                <h1>Viggo's Nettside</h1>
-                <p>Velkommen til min side. Den er om alt meg.</p>
-            </div>
-        </div>
-
+    
 </body>
 </html>
