--- a/Min Side/bent.html
+++ b/Min Side/bent.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <div class="container-content">
-            <a href="../index.html">Tilbake</a>
+            <h3><a href="../index.html">Tilbake</a></h3>
         </div>  
     </div>
     
