--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@
 
         <div class="container">
             <div class="head-content">
-                <h1>Viggo's Nettside</h1>
-                <p>Velkommen til min side. Den er om alt meg.</p>
+                <p>Viggo's Nettside</p>
             </div>
         </div>
 
