--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Viggo's Nettside</title>
     <link rel="stylesheet" href="Min Side/CSS/Styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;900&display=swap" rel="stylesheet">
+
 </head>
 <body>
     <nav>
@@ -28,9 +30,20 @@
 
         <div class="container">
             <div class="head-content">
-                <p>Viggo's Nettside</p>
+                <p>Viggo Weissmuller</p>
+                <h1></h1>
             </div>
         </div>
 
 </body>
+<footer>
+    <section class="credit">
+        <div class="credit-content">
+            <ul>
+                <li>Image by&nbsp;<span class="flatart-link"><a href="https://www.freepik.com/author/flatart" target=_blank>flatart</a></span></li>
+            </ul>
+        </div>
+
+    </section>
+</footer>
 </html>
