--- a/Min Side/Om Meg.html
+++ b/Min Side/Om Meg.html
@@ -5,13 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Om Meg</title>
     <link rel="stylesheet" href="CSS/Om MegStyles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;900&display=swap" rel="stylesheet">
 </head>
 <body>
     <nav>
         <ul>
             <li><a href="../index.html">Hjem</a></li>
             <li><a href="Prosjekter.html">Prosjekter</a></li>
-            <li><a href="#">Om Meg</a></li>
+            <li><a href="#">Om</a></li>
             <li><a href="#">Word</a></li>
             <li><a href="#">Ressurser/Hjelp</a> 
                 <ul class="dropdown">
@@ -24,15 +25,16 @@
         </ul>
     </nav>
 
-    <section class="head">
-
-        <div class="container">
-            <div class="head-content">
-                <h1>Om Meg</h1>
-                <p>Index</p>
-            </div>
-        </div>
-
 
 </body>
+<footer>
+    <section class="credit">
+        <div class="credit-content">
+            <ul>
+                <li>Image by&nbsp;<span class="flatart-link"><a href="https://www.freepik.com/author/flatart" target=_blank>flatart</a></span></li>
+            </ul>
+        </div>
+
+    </section>
+</footer>
 </html>
