--- a/Min Side/Prosjekter.html
+++ b/Min Side/Prosjekter.html
@@ -5,13 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Prosjekter</title>
     <link rel="stylesheet" href="CSS/ProsjekterStyles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;900&display=swap" rel="stylesheet">
 </head>
 <body>
     <nav>
         <ul>
             <li><a href="../index.html">Hjem</a></li>
             <li><a href="#">Prosjekter</a></li>
-            <li><a href="Om Meg.html">Om Meg</a></li>
+            <li><a href="Om Meg.html">Om</a></li>
             <li><a href="#">Word</a></li>
             <li><a href="#">Ressurser/Hjelp</a> 
                 <ul class="dropdown">
@@ -24,7 +25,54 @@
         </ul>
     </nav>
 
+    <section class="Prosjekt-Top">
+        <div class="pl">
+            <div class="pl-content"></div>
+                <img src="" alt="Screenshot of Website">
+                <p>Min Side</p>
+        </div>
+
+        <div class="pm">
+            <div class="pm-content"></div>
+                <img src="" alt="Screenshot of Website">
+                <p>Engelsk</p>
+        </div>
+
+        <div class="pr">
+            <div class="pr-content"></div>
+                <img src="" alt="Screenshot of Website">
+                <p>Chambr</p>
+        </div>
+
+    </section>
+
+
+
+    <section class="Prosjekt-Bottom">
+        <div class="plB">
+
+        </div>
+
+        <div class="pmB">
+
+        </div>
+
+        <div class="prB">
+
+        </div>
+
+    </section>
 
     
 </body>
+<footer>
+    <section class="credit">
+        <div class="credit-content">
+            <ul>
+                <li>Image by&nbsp;<span class="flatart-link"><a href="https://www.freepik.com/author/freepik" target=_blank>freepik</a></span></li>
+            </ul>
+        </div>
+
+    </section>
+</footer>
 </html>
