--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div class="container">
             <div class="head-content">
                 <p>Viggo Weissmuller</p>
-                <h1></h1>
+                <h1>Her finner du info om meg <br> og hva jeg har jobbet med</h1>
             </div>
         </div>
 
