--- a/Min Side/Prosjekter.html
+++ b/Min Side/Prosjekter.html
@@ -27,21 +27,24 @@
 
     <section class="Prosjekt-Top">
         <div class="pl">
-            <div class="pl-content"></div>
-                <img src="" alt="Screenshot of Website">
-                <p>Min Side</p>
+            <div class="pl-content">
+                <a href="../index.html"><img src="Bilder/Min Side SS.png" alt="Screenshot of Website"></a>
+                <h1>Min Side</h1>
+            </div>
         </div>
 
         <div class="pm">
-            <div class="pm-content"></div>
-                <img src="" alt="Screenshot of Website">
-                <p>Engelsk</p>
+            <div class="pm-content">
+                <a href="../Engelsk Nettside/index.html"><img src="" alt="Screenshot of Website"></a>
+                <h1>English Tourist Site</h1>
+            </div>
         </div>
 
         <div class="pr">
-            <div class="pr-content"></div>
-                <img src="" alt="Screenshot of Website">
-                <p>Chambr</p>
+            <div class="pr-content">
+                <a href="../CHAMBR/index.html"><img src="" alt="Screenshot of Website"></a>
+                <h1>Chambr</h1>
+            </div>
         </div>
 
     </section>
@@ -50,15 +53,22 @@
 
     <section class="Prosjekt-Bottom">
         <div class="plB">
+            <div class="plB-content">
+
+            </div>
 
         </div>
 
         <div class="pmB">
+            <div class="pmB-content">
 
+            </div>
         </div>
 
         <div class="prB">
-
+            <div class="prB-content">
+                
+            </div>
         </div>
 
     </section>
