The Michelin Star

--- a/Min Side/Prosjekter.html
+++ b/Min Side/Prosjekter.html
@@ -28,21 +28,22 @@
     <section class="Prosjekt-Top">
         <div class="pl">
             <div class="pl-content">
-                <a href="../index.html"><img src="Bilder/Min Side SS.png" alt="Screenshot of Website"></a>
+                <a href="../index.html" target="_blank"><img src="Bilder/Min Side SS.png" alt="Screenshot of Website"></a>
                 <h1>Min Side</h1>
+                <p>Siden du er på nå! Det er prosjektet vi jobber med i Konseptutvikling og Programmering med Bent</p>
             </div>
         </div>
 
         <div class="pm">
             <div class="pm-content">
-                <a href="../Engelsk Nettside/index.html"><img src="" alt="Screenshot of Website"></a>
+                <a href="../Engelsk Nettside/index.html" target="_blank"><img src="" alt="Screenshot of Website"></a>
                 <h1>English Tourist Site</h1>
             </div>
         </div>
 
         <div class="pr">
             <div class="pr-content">
-                <a href="../CHAMBR/index.html"><img src="" alt="Screenshot of Website"></a>
+                <a href="../CHAMBR/index.html" target="_blank"><img src="" alt="Screenshot of Website"></a>
                 <h1>Chambr</h1>
             </div>
         </div>
@@ -54,6 +55,8 @@
     <section class="Prosjekt-Bottom">
         <div class="plB">
             <div class="plB-content">
+                <a href="#"><img src="" alt="Nothing here yet"></a>
+                <h1>Ingenting endå</h1>
 
             </div>
 
@@ -61,12 +64,16 @@
 
         <div class="pmB">
             <div class="pmB-content">
+                <a href="#"><img src="" alt="Nothing here yet"></a>
+                <h1>Ingenting endå</h1>
 
             </div>
         </div>
 
         <div class="prB">
             <div class="prB-content">
+                <a href="#"><img src="" alt="Nothing here yet"></a>
+                <h1>Ingenting endå</h1>
                 
             </div>
         </div>
