--- a/Min Side/Prosjekter.html
+++ b/Min Side/Prosjekter.html
@@ -57,16 +57,15 @@
             <div class="plB-content">
                 <a href="#"><img src="" alt="Nothing here yet"></a>
                 <h1>Ingenting endå</h1>
-
+                <p>Filler</p>
             </div>
-
         </div>
 
         <div class="pmB">
             <div class="pmB-content">
                 <a href="#"><img src="" alt="Nothing here yet"></a>
                 <h1>Ingenting endå</h1>
-
+                <p>Filler</p>
             </div>
         </div>
 
@@ -74,13 +73,11 @@
             <div class="prB-content">
                 <a href="#"><img src="" alt="Nothing here yet"></a>
                 <h1>Ingenting endå</h1>
-                
+                <p>One Piece</p>
             </div>
         </div>
 
     </section>
-
-    
 </body>
 <footer>
     <section class="credit">
