--- a/Min Side/Prosjekter.html
+++ b/Min Side/Prosjekter.html
@@ -25,52 +25,70 @@
         </ul>
     </nav>
 
+
+<section class="header">
+    <div class="header-box">
+         <div class="header-content">
+             <h1>Prosjekter jeg har jobbet med!</h1>
+        </div>
+    </div>
+</section>
+
+
+    <!-- Konteinere med prosjekter-->
     <section class="Prosjekt-Top">
-        <div class="pl">
-            <div class="pl-content">
+
+
+        <div class="Project-box">
+            <div class="Project-content">
                 <a href="../index.html" target="_blank"><img src="Bilder/Min Side SS.png" alt="Screenshot of Website"></a>
                 <h1>Min Side</h1>
                 <p>Siden du er på nå! Det er prosjektet vi jobber med i Konseptutvikling og Programmering med Bent</p>
             </div>
         </div>
 
-        <div class="pm">
-            <div class="pm-content">
+        <div class="Project-box">
+            <div class="Project-content">
                 <a href="../Engelsk Nettside/index.html" target="_blank"><img src="" alt="Screenshot of Website"></a>
                 <h1>English Tourist Site</h1>
+                <p>N/A</p>
             </div>
         </div>
 
-        <div class="pr">
-            <div class="pr-content">
+        <div class="Project-box">
+            <div class="Project-content">
                 <a href="../CHAMBR/index.html" target="_blank"><img src="" alt="Screenshot of Website"></a>
-                <h1>Chambr</h1>
+                <h1>N/A</h1>
+                <p>N/A</p>
             </div>
         </div>
+
 
     </section>
 
 
 
     <section class="Prosjekt-Bottom">
-        <div class="plB">
-            <div class="plB-content">
+
+
+        <div class="Project-box">
+            <div class="Project-content">
                 <a href="#"><img src="" alt="Nothing here yet"></a>
                 <h1>Ingenting endå</h1>
                 <p>Filler</p>
             </div>
         </div>
 
-        <div class="pmB">
-            <div class="pmB-content">
+        <div class="Project-box">
+            <div class="Project-content">
                 <a href="#"><img src="" alt="Nothing here yet"></a>
                 <h1>Ingenting endå</h1>
                 <p>Filler</p>
             </div>
         </div>
 
-        <div class="prB">
-            <div class="prB-content">
+        <div class="Project-box">
+            <div class="Project-content">
                 <a href="#"><img src="" alt="Nothing here yet"></a>
                 <h1>Ingenting endå</h1>
                 <p>One Piece</p>
@@ -78,10 +96,14 @@
         </div>
 
     </section>
+
+
 </body>
+
+
 <footer>
-    <section class="credit">
-        <div class="credit-content">
+    <section class="Footer-box">
+        <div class="Footer-content">
             <ul>
                 <li>Image by&nbsp;<span class="flatart-link"><a href="https://www.freepik.com/author/freepik" target=_blank>freepik</a></span></li>
             </ul>
