--- a/Min Side/Prosjekter.html
+++ b/Min Side/Prosjekter.html
@@ -30,6 +30,7 @@
     <div class="header-box">
          <div class="header-content">
              <h1>Prosjekter jeg har jobbet med!</h1>
+             <p>sdfs</p>
         </div>
     </div>
 </section>
