--- a/Engelsk Nettside/index.html
+++ b/Engelsk Nettside/index.html
@@ -11,12 +11,29 @@
 <body>
     <nav>
         <ul>
-            <li><a href="#"><img src="" alt="Visit California"></a></li>
-            <li><a href="#">Places to visit</a></li>
-            <li><a href="#">Hotels</a></li>
-            <li><a href="#">Shops</a></li>
-            <li><a href="#">Info</a></li>
+            <li id="button">
+                <a href="#">Home</a>
+                <div class="underline"></div>
+            </li>
+
+            <li id="button">               
+                <a href="#">Destinations</a>
+                <div class="underline"></div>
+            </li>
+
+            <li id="button">               
+                <a href="#">Things to do</a>
+                <div class="underline"></div>
+            </li>
+
+            <li id="button">             
+                <a href="#">Plan Your Trip</a>
+                <div class="underline"></div>
+            </li>
+
+
         </ul>
+
     </nav>
 
     <section class="hero-card">
@@ -29,4 +46,14 @@
     </section>
 
 </body>
+<footer>
+    <section class="Footer-box">
+        <div class="Footer-content">
+            <ul>
+                <li>Image by&nbsp;<span class="flatart-link"><a href="https://www.freepik.com/author/freepik" target=_blank>freepik</a></span></li>
+            </ul>
+        </div>
+
+    </section>
+</footer>
 </html>
