--- a/Engelsk Nettside/index.html
+++ b/Engelsk Nettside/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="CSS/Styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="JS\Image Slide.js">
    
     <title>Tourism</title>
 </head>
@@ -35,6 +36,8 @@
         </ul>
 
     </nav>
+
+
 
     <section class="hero-card">
         <div class="hero-container">
