--- a/Engelsk Nettside/index.html
+++ b/Engelsk Nettside/index.html
@@ -38,17 +38,32 @@
     </nav>
 
 
-
-    <section class="hero-card">
-        <div class="hero-container">
-            <div class="hero-content">
-                <h1>Where would you go?</h1>
-                <h4>Visit California today</h4>
+    <div class="startimage">    
+        <div class="hero-parent">
+            <div class="hero-container">
+                <div class="hero-content">
+                    <h1> Where Would <br> You Go?</h1>
+                    <p>Endless possibilities</p>
+                    <button class="button" id="hero-button">Plan Now!</button>
+                </div>
             </div>
         </div>
-    </section>
+        <img src="Bilder/alexey-komissarov-1MnkSfwtxRI-unsplash.jpg" alt="California Bridge">
+    </div>
+
+
+    <p>
+        Welcome to California, where breathtaking landscapes, vibrant cities,
+         and diverse cultures come together to create the ultimate travel experience! 
+         From the sunny beaches of San Diego to the majestic mountains of the Sierra
+          Nevada, California offers endless adventures for every type of traveler. 
+          Explore our site to discover your perfect getaway
+    </p>
+
 
 </body>
+
+
 <footer>
     <section class="Footer-box">
         <div class="Footer-content">
