--- a/Engelsk Nettside/index.html
+++ b/Engelsk Nettside/index.html
@@ -5,9 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="CSS/Styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="JS\Image Slide.js">
-   
-    <title>Tourism</title>
+    <title>California</title>
+
 </head>
 <body>
     <nav>
@@ -28,37 +27,47 @@
             </li>
 
             <li id="button">             
-                <a href="#">Plan Your Trip</a>
+                <a href="HTML/Plan you trip.html">Plan Your Trip</a>
                 <div class="underline"></div>
             </li>
-
 
         </ul>
 
     </nav>
 
 
-    <div class="startimage">    
+    <div class="startimage"> 
         <div class="hero-parent">
             <div class="hero-container">
                 <div class="hero-content">
                     <h1> Where Would <br> You Go?</h1>
                     <p>Endless possibilities</p>
-                    <button class="button" id="hero-button">Plan Now!</button>
+                    <button class="button" id="hero-button">
+                        <a href="HTML/Plan you trip.html">Plan Now!</a>
+                        <div id="translate"></div>
+                    </button>
                 </div>
             </div>
         </div>
         <img src="Bilder/alexey-komissarov-1MnkSfwtxRI-unsplash.jpg" alt="California Bridge">
     </div>
 
+    <section class="hero-bar">
+        <div class="welcome-container">
+            <div class="welcome-box">
+                <div class="welcome-content">
+                    <p>
+                        Welcome to California, where breathtaking landscapes, vibrant cities,
+                        and diverse cultures come together to create the ultimate travel experience! 
+                        From the sunny beaches of San Diego to the majestic mountains of the Sierra
+                        Nevada, California offers endless adventures for every type of traveler. 
+                        Explore our site to discover your perfect getaway
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
 
-    <p>
-        Welcome to California, where breathtaking landscapes, vibrant cities,
-         and diverse cultures come together to create the ultimate travel experience! 
-         From the sunny beaches of San Diego to the majestic mountains of the Sierra
-          Nevada, California offers endless adventures for every type of traveler. 
-          Explore our site to discover your perfect getaway
-    </p>
 
 
 </body>
