--- a/Engelsk Nettside/index.html
+++ b/Engelsk Nettside/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="CSS/Styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="JS\Image Slide.js">
    
     <title>Tourism</title>
 </head>
@@ -14,7 +13,7 @@
         <ul>
             <li id="button">
                 <a href="#">Home</a>
-                <div class="underline"></div>
+                <div class="solid-underline"></div>
             </li>
 
             <li id="button">               
@@ -28,7 +27,12 @@
             </li>
 
             <li id="button">             
-                <a href="#">Plan Your Trip</a>
+                <a href="HTML/Plan Your Trip.html">Plan Your Trip</a>
+                <div class="underline"></div>
+            </li>
+
+            <li id="button">             
+                <a href="#">History</a>
                 <div class="underline"></div>
             </li>
 
@@ -64,14 +68,4 @@
 </body>
 
 
-<footer>
-    <section class="Footer-box">
-        <div class="Footer-content">
-            <ul>
-                <li>Image by&nbsp;<span class="flatart-link"><a href="https://www.freepik.com/author/freepik" target=_blank>freepik</a></span></li>
-            </ul>
-        </div>
-
-    </section>
-</footer>
 </html>
