--- a/Min Side/Prosjekter.html
+++ b/Min Side/Prosjekter.html
@@ -43,7 +43,9 @@
 
         <div class="Project-box">
             <div class="Project-content">
-                <a href="../index.html" target="_blank"><img src="Bilder/Min Side SS.png" alt="Screenshot of Website"></a>
+                <div class="picture">
+                    <a href="../index.html" target="_blank"><img src="Bilder/Min Side SS.png" alt="Screenshot of Website"></a>
+                </div>  
                 <h1>Min Side</h1>
                 <p>Siden du er på nå! Det er prosjektet vi jobber med i Konseptutvikling og Programmering med Bent</p>
             </div>
@@ -51,9 +53,11 @@
 
         <div class="Project-box">
             <div class="Project-content">
-                <a href="../Engelsk Nettside/index.html" target="_blank"><img src="" alt="Screenshot of Website"></a>
+                <div class="picture">
+                    <a href="../Engelsk Nettside/index.html" target="_blank"><img src="Bilder/Engelsk_Bilde.png" alt="Screenshot of Website"></a>
+                </div>     
                 <h1>English Tourist Site</h1>
-                <p>N/A</p>
+                <p>Del av Engelsk oppgave vi fikk. Den er en Turist nettside om California. vi hadde 0 tid på den. WIP</p>
             </div>
         </div>
 
