--- a/Engelsk Nettside/HTML/Plan Your Trip.html
+++ b/Engelsk Nettside/HTML/Plan Your Trip.html
@@ -55,11 +55,117 @@
     <div class="Places-top">
         <div class="Places-container-1">
             <div class="Places-container-1-content">
-                <h1>Find a place to travel!</h1>
-
+                <h1>WOW! So many places!</h1>
+                    
             </div>
         </div>
     </div>
 
+    <section class="travel-list">
+
+        <div class="list-1">
+            <div class="box">
+                <div class="box-content">
+                    <img src="" alt="">
+                    <a href="https://www.nps.gov/yose/index.htm">Yosemite National Park</a>
+                </div>
+            </div>
+
+            <div class="box">
+                <div class="box-content">
+                    <img src="" alt="Picture of Golden Gate Bridg">
+                    <a href="https://www.sftravel.com/">San Francisco</a>
+                </div>
+            </div>
+
+            <div class="box">
+                <div class="box-content">
+                    <img src="" alt="Picture of Hollywood Sign">
+                    <a href="https://www.discoverlosangeles.com/">Los Angeles</a>
+                </div>
+            </div>
+        </div>
+
+
+
+        <div class="list-2">
+
+            <div class="box">
+                <div class="box-content">
+                    <img src="" alt="">
+                    <a href="https://www.visitnapavalley.com/">Napa Valley</a>
+                </div>
+            </div>
+
+            <div class="box">
+                <div class="box-content">
+                    <img src="" alt="Image of lake Tahoe">
+                    <a href="https://visitlaketahoe.com/">Lake Taho</a>
+                </div>
+            </div>
+
+            <div class="box">
+                <div class="box-content">
+                    <img src="" alt="Disneyland Anaheim">
+                    <a href="https://disneyland.disney.go.com/">Disneyland Resort</a>
+                </div>
+            </div>
+
+
+        </div>
+
+
+
+        <div class="list-3">
+
+            <div class="box">
+                <div class="box-content">
+                    <img src="" alt="">
+                    <a href="https://www.bigsurcalifornia.org/">Big Sur</a>
+                </div>
+            </div>
+
+            <div class="box">
+                <div class="box-content">
+                    <img src="" alt="e">
+                    <a href="https://www.sandiego.org/">San Diego Balboa Park</a>
+                </div>
+            </div>
+
+            <div class="box">
+                <div class="box-content">
+                    <img src="" alt="">
+                    <a href="https://santabarbaraca.com/">Santa Barbara</a>
+                </div>
+            </div>
+        </div>
+
+
+        <div class="list-4">
+
+            <div class="box">
+                <div class="box-content">
+                    <img src="" alt="">
+                    <a href="https://www.nps.gov/seki/index.htm">Sequoia and Kings Canyon National Parks</a>
+                </div>
+            </div>
+
+            <div class="box">
+                <div class="box-content">
+                    <img src="" alt="">
+                    <a href="https://visitpalmsprings.com/">Palm Springs</a>
+                </div>
+            </div>
+
+            <div class="box">
+                <div class="box-content">
+                    <img src="" alt="">
+                    <a href="https://www.nps.gov/deva/index.htm"> Death Valley National Park</a>
+                </div>
+            </div>
+
+
+        </div>
+    </section>
 
 </body>
