--- a/Engelsk Nettside/HTML/Plan Your Trip.html
+++ b/Engelsk Nettside/HTML/Plan Your Trip.html
@@ -32,7 +32,7 @@
             </li>
 
             <li id="button">             
-                <a href="#">History</a>
+                <a href="Plan Your Trip.html">History</a>
                 <div class="underline"></div>
             </li>
 
@@ -41,14 +41,14 @@
     </nav>
 
     <section class="hero">
-        <div class="image"><img src="../Bilder/pexels-olly-941555(1).jpg" alt="Woman Thinking"></div>
+        <div class="image"><img src="../Bilder/Big-California-Nights.jpg" alt="California-Night"></div>
         <div class="hero-card">
             <div class="hero-content">
-                <h1>Want to start planning?</h1>
-                <h2>This is the best place to start!</h1>
-
+                <h1>Wondering Where to go?</h1>
+                <h2>This is the Best Place to Start!</h1>
             </div>
         </div>
+        <p>Image by&nbsp;<span class="freepix-link"><a href="https://www.freepik.com/free-photo/night-view-victoria-harbor-hong-kong_19075421.htm#position=3">Freepix</a></span></p>
     </section>
 
 
@@ -63,17 +63,17 @@
 
     <section class="travel-list">
 
-        <div class="list-1">
+        <section class="row-1">
             <div class="box">
                 <div class="box-content">
-                    <img src="" alt="">
+                       <img src="" alt="">         
                     <a href="https://www.nps.gov/yose/index.htm">Yosemite National Park</a>
                 </div>
             </div>
 
             <div class="box">
                 <div class="box-content">
-                    <img src="" alt="Picture of Golden Gate Bridg">
+                      <img src="" alt="Picture of Golden Gate Bridg">                 
                     <a href="https://www.sftravel.com/">San Francisco</a>
                 </div>
             </div>
@@ -84,11 +84,11 @@
                     <a href="https://www.discoverlosangeles.com/">Los Angeles</a>
                 </div>
             </div>
-        </div>
+        </section>
 
 
 
-        <div class="list-2">
+        <section class="row-2">
 
             <div class="box">
                 <div class="box-content">
@@ -112,11 +112,11 @@
             </div>
 
 
-        </div>
+        </section>
 
 
 
-        <div class="list-3">
+        <section class="row-3">
 
             <div class="box">
                 <div class="box-content">
@@ -138,10 +138,10 @@
                     <a href="https://santabarbaraca.com/">Santa Barbara</a>
                 </div>
             </div>
-        </div>
+        </section>
 
 
-        <div class="list-4">
+        <section class="row-4">
 
             <div class="box">
                 <div class="box-content">
@@ -165,7 +165,7 @@
             </div>
 
 
-        </div>
+        </section>
     </section>
 
 </body>
