--- a/Engelsk Nettside/index.html
+++ b/Engelsk Nettside/index.html
@@ -11,18 +11,21 @@
 <body>
     <nav>
         <ul>
+            <li>
+                <img src="Bilder/Cali Flag img.jpg" alt="">
+            </li>
             <li id="button">
                 <a href="#">Home</a>
                 <div class="solid-underline"></div>
             </li>
 
             <li id="button">               
-                <a href="#">Destinations</a>
+                <a href="HTML/Destinations.html">Destinations</a>
                 <div class="underline"></div>
             </li>
 
             <li id="button">               
-                <a href="#">Things to do</a>
+                <a href="HTML/Things to do.html">Things to do</a>
                 <div class="underline"></div>
             </li>
 
@@ -32,7 +35,7 @@
             </li>
 
             <li id="button">             
-                <a href="#">History</a>
+                <a href="HTML/History.html">History</a>
                 <div class="underline"></div>
             </li>
 
@@ -56,22 +59,6 @@
         </div>
         <img src="Bilder/alexey-komissarov-1MnkSfwtxRI-unsplash.jpg" alt="California Bridge">
     </div>
-
-    <section class="hero-bar">
-        <div class="welcome-container">
-            <div class="welcome-box">
-                <div class="welcome-content">
-                    <p>
-                        Welcome to California, where breathtaking landscapes, vibrant cities,
-                        and diverse cultures come together to create the ultimate travel experience! 
-                        From the sunny beaches of San Diego to the majestic mountains of the Sierra
-                        Nevada, California offers endless adventures for every type of traveler. 
-                        Explore our site to discover your perfect getaway
-                    </p>
-                </div>
-            </div>
-        </div>
-    </section>
 
 
 
